--- a/configuration/conf.properties
+++ b/configuration/conf.properties
@@ -1,4 +1,5 @@
-client.port = 2001
-rmi.port = 2002
-random.port.hint = 0
-host = localhost
+client.port=2001
+server.port=2000
+rmi.port=2002
+random.port.hint=0
+host=localhost
